@@ -440,8 +440,11 @@ public class Utils {
     }
   }
 
+  @SuppressForbidden(
+      reason = "singletonList(null) is intentional — null is a sentinel path element")
   public static Object getObjectByPath(Object root, boolean onlyPrimitive, String hierarchy) {
-    if (hierarchy == null) return getObjectByPath(root, onlyPrimitive, List.of(null));
+    if (hierarchy == null)
+      return getObjectByPath(root, onlyPrimitive, Collections.singletonList(null));
     List<String> parts = StrUtils.splitSmart(hierarchy, '/', true);
     return getObjectByPath(root, onlyPrimitive, parts);
   }
